--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -1,15 +1,7 @@
 <div class="container">
   <div class="row justify-content-md-center">
-    <div class="col-md-3">
-      <div class="avatarFrameoffline marto15 marbo15">
-        <img src="assets/img/generic_avatar.png" class="avatarImage img-fluid">
-      </div>
-    </div>
-  </div>
-  <div class="row justify-content-md-center">
     <div class="col-md-6">
       <div class="center">
-        <h3>Iniciar Sesion</h3>
         <img src="assets/imgs/logo_troy.png" />
       </div>
       <p *ngIf="operation == 'register'">Ya tienes cuenta? Has <a (click)="operation = 'login'">Login</a></p>
@@ -21,8 +13,8 @@
       </div>
       <hr />
       <div class="center marto15">
-        <a (click)="login()" *ngIf="operation == 'login'" class="btn btn-primary btn-block">Iniciar Sesioon</a>
-        <a (click)="register()" *ngIf="operation == 'register'" class="btn btn-primary btn-block">Registrarme</a>
+        <button (click)="login()" *ngIf="operation == 'login'" class="btn btn-primary btn-block">Iniciar Sesioon</button>
+        <button (click)="register()" *ngIf="operation == 'register'" class="btn btn-primary btn-block">Registrarme</button>
       </div>
     </div>
   </div>
