--- a/web/src/app/form/form.component.html
+++ b/web/src/app/form/form.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="col-md-3">
       <div class="shadow-sm p-3 mb-5 bg-white rounded">
-        <b>Instaló: </b> {{form.instalo}}<br />
+        <b>Instaló: </b> {{form.instalo.name}} {{form.instalo.last_name}}<br />
         <b>Medidor: </b> {{form.medidor}}
       </div>
     </div>
