--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,21 +1,34 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" *ngIf="router.url != '/login'">
-  <a class="navbar-brand" href="#">Troy T&D</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <div class="container">
+    <a class="navbar-brand" href="#">Troy T&D</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/medidores">Medidores</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/usuarios">Usuarios</a>
-      </li>
-    </ul>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/medidores">Medidores</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/usuarios">Usuarios</a>
+        </li>
+      </ul>
+
+      <ul class="navbar-nav mr-auto" *ngIf="user">
+        <li class="nav-item">
+          <div ngbDropdown class="d-inline-block">
+            <button class="btn btn-outline-primary" id="dropdownBasic1" ngbDropdownToggle>{{user.name}} {{user.last_name}}</button>
+            <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+              <button class="dropdown-item" (click)="logout()">Cerrar Sesión</button>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
 
