--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -34,9 +34,9 @@
         <button class="btn btn-sm btn-primary" ngbTooltip="Ver" routerLink="/form/{{form.uid}}">
           <i class="fas fa-eye"></i>
         </button>
-        <button class="btn btn-sm btn-danger" ngbTooltip="Eliminar" (click)="remove(form)">
+        <!--<button class="btn btn-sm btn-danger" ngbTooltip="Eliminar" (click)="remove(form)">
           <i class="fas fa-trash"></i>
-        </button>
+        </button>-->
       </td>
     </tr>
     </tbody>
