--- a/web/src/app/usuarios/usuarios.component.html
+++ b/web/src/app/usuarios/usuarios.component.html
@@ -36,6 +36,14 @@
         <input type="text" class="form-control" id="exampleInput4" [(ngModel)]="usuario.imss" />
       </div>
       <div class="form-group">
+        <label for="exampleInput10">Tipo de usuario</label>
+        <select class="form-control" id="exampleInput10" [(ngModel)]="usuario.tipo">
+          <option value="contratista">Contratista</option>
+          <option value="cfe">CFE</option>
+          <option value="troy">Troy T&D</option>
+        </select>
+      </div>
+      <div class="form-group">
         <label for="exampleInput5">Es supervisor?</label>
         <select class="form-control" id="exampleInput5" [(ngModel)]="usuario.is_supervisor">
           <option value="si">Sí</option>
