--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -7,13 +7,13 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/home">Inicio <span class="sr-only">(actual)</span></a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/medidores">Medidores</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/fallidas">Visitas Fallidas</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/usuarios">Usuarios</a>
         </li>
       </ul>
