Added change pass

--- a/web/src/app/usuarios/usuarios.component.html
+++ b/web/src/app/usuarios/usuarios.component.html
@@ -99,6 +99,9 @@
         <button class="btn btn-sm btn-danger" ngbTooltip="Eliminar" (click)="remove(usuario)">
           <i class="fas fa-trash"></i>
         </button>
+        <button class="btn btn-sm btn-dark" ngbTooltip="Reset Password" (click)="reset(usuario)">
+          <i class="fas fa-key"></i>
+        </button>
       </td>
     </tr>
     </tbody>
