--- a/web/src/app/form/form.component.html
+++ b/web/src/app/form/form.component.html
@@ -60,7 +60,7 @@
       <th>Material</th>
     </tr>
     <ng-container *ngFor="let m of form.current_materials">
-      <tr *ngIf="m.current_quantity != 0">
+      <tr *ngIf="m.current_quantity">
         <td>{{m.current_quantity}}</td>
         <td>{{m.unidad}}</td>
         <td>{{m.descripcion}}</td>
