--- a/mobile/src/pages/form-installation/form-installation.scss
+++ b/mobile/src/pages/form-installation/form-installation.scss
@@ -22,4 +22,25 @@ page-form-installation {
       height: 150px;
     }
   }
+  #materialList {
+    margin-top: 10px;
+  }
+  #materialList > .row {
+    background-color: #272727;
+    color: white;
+    border-bottom: 1px solid #6f6f6f;
+    padding: 10px 10px 0 10px;
+  }
+  .materialInput2 {
+    background-color: white;
+    padding: 5px;
+    margin: 0 !important;
+    color: black;
+  }
+  .materialInput2 > .text-input-ios {
+    margin: 0 !important;
+  }
+  .materialInput2 > .text-input-md {
+    margin: 0 !important;
+  }
 }
