--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -8,13 +8,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/home">Inicio <span class="sr-only">(actual)</span></a>
+          <a class="nav-link" *ngIf="user && user.superadmin" routerLink="/home">Inicio <span class="sr-only">(actual)</span></a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/fallidas">Visitas Fallidas</a>
+          <a class="nav-link" *ngIf="user && user.superadmin" routerLink="/fallidas">Visitas Fallidas</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/usuarios">Usuarios</a>
+          <a class="nav-link" *ngIf="user && user.superadmin" routerLink="/usuarios">Usuarios</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/reports">Reportes</a>
         </li>
       </ul>
 
