--- a/web/src/app/reports/reports.component.html
+++ b/web/src/app/reports/reports.component.html
@@ -36,7 +36,7 @@
     </div>
   </div>
   <br />
-  <h3>Formularios Llenados</h3>
+  <h3>{{filteredForms.length}} Formularios Llenados</h3>
   <hr />
   <div class="input-group mb-3">
     <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Buscar" aria-describedby="basic-addon2" [(ngModel)]="query">
