--- a/web/src/app/reports/reports.component.html
+++ b/web/src/app/reports/reports.component.html
@@ -34,6 +34,9 @@
     <div class="col-md-4">
       <button class="btn btn-block btn-primary" (click)="generate()">Generar</button>
     </div>
+    <div class="col-md-4">
+      <button class="btn btn-block btn-secondary" (click)="generateExcel()">Descargar Excel</button>
+    </div>
   </div>
   <br />
   <h3>{{filteredForms.length}} Formularios Llenados</h3>
