--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -19,6 +19,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" routerLink="/reports">Reportes</a>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/total_reports">Reportes Totales</a>
+        </li>
       </ul>
 
       <ul class="navbar-nav mr-auto" *ngIf="user">
