Improvements on reports

--- a/web/src/app/reports/reports.component.html
+++ b/web/src/app/reports/reports.component.html
@@ -35,10 +35,25 @@
       <button class="btn btn-block btn-primary" [disabled]="!fromDate || !toDate" (click)="generate()">Generar</button>
     </div>
   </div>
+  <br *ngIf="user && user.superadmin" />
+  <div class="row" *ngIf="user && user.superadmin">
+    <div class="col-md-4">
+      <select class="form-control" [(ngModel)]="selectedSupervisor">
+        <option *ngFor="let u of users" [ngValue]="u">
+          <span *ngIf="u.company">({{u.company.nombre}}) </span>
+          {{u.name}} {{u.last_name}}
+        </option>
+      </select>
+    </div>
+    <div class="col-md-3">
+      <button class="btn btn-primary btn-block" (click)="generateForSupervisor()" [disabled]="!fromDate || !toDate || !selectedSupervisor">Generar para Supervisor</button>
+    </div>
+  </div>
+  <br />
   <div class="row" *ngIf="filteredForms.length > 0">
     <div class="col-md-12">
       <hr />
-      <button class="btn btn-block btn-secondary" (click)="generateExcel()">Descargar Excel</button>
+      <button class="btn btn-block btn-secondary" [disabled]="!fromDate || !toDate" (click)="generateExcel()">Descargar Excel</button>
     </div>
   </div>
   <br />
