--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -16,12 +16,18 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" *ngIf="user && user.superadmin" routerLink="/usuarios">Usuarios</a>
         </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/reports">Reportes</a>
-        </li>
-        <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" *ngIf="user && user.superadmin" routerLink="/total_reports">Reportes Totales</a>
-        </li>
+        <ul class="navbar-nav mr-auto" *ngIf="user">
+          <li class="nav-item">
+            <div ngbDropdown class="d-inline-block">
+              <button class="btn btn-outline-warning" id="dropdownBasic2" ngbDropdownToggle>Reportes</button>
+              <div ngbDropdownMenu aria-labelledby="dropdownBasic2">
+                <a class="dropdown-item" *ngIf="user && user.superadmin" routerLink="/global">Global</a>
+                <a class="dropdown-item" *ngIf="user && user.superadmin" routerLink="/total_reports">Totales</a>
+                <a class="dropdown-item" routerLink="/reports">Por Supervisor</a>
+              </div>
+            </div>
+          </li>
+        </ul>
       </ul>
 
       <ul class="navbar-nav mr-auto" *ngIf="user">
