--- a/web/src/app/reports/reports.component.html
+++ b/web/src/app/reports/reports.component.html
@@ -53,7 +53,7 @@
   <div class="row" *ngIf="filteredForms.length > 0">
     <div class="col-md-12">
       <hr />
-      <button class="btn btn-block btn-secondary" [disabled]="!fromDate || !toDate" (click)="generateExcel()">Descargar Excel</button>
+      <button class="btn btn-block btn-secondary" [disabled]="!fromDate || !toDate" (click)="generateReport()">Descargar Excel</button>
     </div>
   </div>
   <br />
