--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -14,6 +14,9 @@
           <a class="nav-link" *ngIf="user && user.superadmin" routerLink="/fallidas">Visitas Fallidas</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" *ngIf="user && user.superadmin" routerLink="/subcontratistas">Subcontratistas</a>
+        </li>
+        <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" *ngIf="user && user.superadmin" routerLink="/usuarios">Usuarios</a>
         </li>
         <ul class="navbar-nav mr-auto" *ngIf="user">
