--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -1,9 +1,10 @@
 <div class="container">
   <br />
   <h3>Formularios Llenados</h3>
+  <a class="btn btn-primary" routerLink="/add_form">Agregar</a>
   <hr />
   <div class="input-group mb-3">
-    <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Buscar" aria-describedby="basic-addon2" [(ngModel)]="query">
+    <input type="text" class="form-control" placeholder="Buscar" aria-label="Buscar" aria-describedby="basic-addon2" [(ngModel)]="query">
     <div class="input-group-append">
       <span class="input-group-text" id="basic-addon2">
         <i class="fas fa-search"></i>
