--- a/web/src/app/add-form/add-form.component.html
+++ b/web/src/app/add-form/add-form.component.html
@@ -9,7 +9,7 @@
       </div>
       <div class="col-md-6">
         <button class="btn btn-block btn-primary" *ngIf="step !== last_step" button full icon-end (click)="next()">Siguiente <span name="arrow-dropright-circle"></span></button>
-        <button class="btn btn-block btn-primary" *ngIf="step === last_step && !showing" button full icon-end (click)="finish()" color="secondary">Actualizar <span name="checkmark-circle"></span></button>
+        <button class="btn btn-block btn-primary" *ngIf="step === last_step && !showing" button full icon-end (click)="finish()" color="secondary">Guardar <span name="checkmark-circle"></span></button>
       </div>
     </div>
     <hr />
@@ -119,7 +119,7 @@
           <div>
             <label color="primary" floating>Instaló</label>
             <select class="form-control"  [(ngModel)]="form.instalo">
-              <option [value]="e" *ngFor="let e of employees">({{e.ciudad}}) {{e.nombre}}</option>
+              <option [ngValue]="e" *ngFor="let e of employees">({{e.ciudad}}) {{e.nombre}}</option>
             </select>
           </div>
         </div>
@@ -129,7 +129,7 @@
           <div>
             <label color="primary" floating>Supervisó</label>
             <select class="form-control"  [(ngModel)]="form.superviso">
-              <option [value]="s" *ngFor="let s of supervisores">{{s.name}} {{s.last_name}}</option>
+              <option [ngValue]="s" *ngFor="let s of supervisores">{{s.name}} {{s.last_name}}</option>
             </select>
           </div>
         </div>
@@ -216,8 +216,10 @@
         <img [src]="p" class="framePicture img-fluid" />
       </div>
     </div>
-    <div class="row" *ngIf="form.pictures">
-      <b>No se capturaron imágenes</b>
+    <div class="row" *ngIf="!form.pictures">
+      <div class="col-md-12">
+        <b>No se pueden cargar imágenes desde web</b>
+      </div>
     </div>
   </div>
 
