--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -26,6 +26,7 @@
               <div ngbDropdownMenu aria-labelledby="dropdownBasic2">
                 <a class="dropdown-item" *ngIf="user && user.superadmin" routerLink="/global">Global</a>
                 <a class="dropdown-item" *ngIf="user && user.superadmin" routerLink="/material">Materiales</a>
+                <a class="dropdown-item" *ngIf="user && user.company" routerLink="/mymaterial">Mis Materiales</a>
                 <a class="dropdown-item" *ngIf="user && user.superadmin" routerLink="/total_reports">Totales</a>
                 <a class="dropdown-item" routerLink="/reports">Por Supervisor</a>
                 <a class="dropdown-item" *ngIf="user && user.tipo == 'cfe'" routerLink="/reportsCFE">CFE</a>
