Added new excel report

--- a/web/src/app/form/form.component.html
+++ b/web/src/app/form/form.component.html
@@ -2,6 +2,7 @@
   <br />
   <b class="float-right">Enviado: {{form.uid | date: 'd/MM/yyy h:mm a'}}</b>
   <h3>Formulario #{{form.uid}}</h3>
+  <button class="btn btn-dark" (click)="generateReport()">Descargar</button>
   <hr />
   <div class="row">
     <div class="col-md-5">
