correcciones chequeo serie y medidor. Listas más anchas

--- a/web/src/app/usuarios/usuarios.component.html
+++ b/web/src/app/usuarios/usuarios.component.html
@@ -39,7 +39,7 @@
       <div class="form-group">
         <label for="exampleInput10">Tipo de usuario</label>
         <select class="form-control" id="exampleInput10" [(ngModel)]="usuario.tipo">
-          <option value="contratista">Contratista</option>
+          <option value="contratista">Subcontratista</option>
           <option value="cfe">CFE</option>
           <option value="troy">Troy T&D</option>
         </select>
