--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -19,6 +19,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" *ngIf="user && user.superadmin" routerLink="/usuarios">Usuarios</a>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/add_form">Agregar Formulario</a>
+        </li>
         <ul class="navbar-nav mr-auto" *ngIf="user">
           <li class="nav-item">
             <div ngbDropdown class="d-inline-block">
