--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,3 +1,4 @@
+<ngx-spinner type="ball-atom"></ngx-spinner>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" *ngIf="router.url != '/login'">
   <div class="container">
     <a class="navbar-brand" routerLink="/">Troy T&D</a>
