--- a/web/src/app/form/form.component.html
+++ b/web/src/app/form/form.component.html
@@ -25,6 +25,11 @@
         <div *ngIf="form.superviso"><b>Supervisó: </b> {{form.superviso.name}} {{form.superviso.last_name}}</div>
       </div>
     </div>
+    <div class="col-md-12" *ngIf="form.subsitute && form.subsitute_serie">
+      <div class="shadow-sm p-3 mb-5 bg-white rounded">
+        <b>ESTE OPTIMIZADOR SUSTITUYE AL OPTIMIZADOR {{form.subsitute_serie}}</b>
+      </div>
+    </div>
   </div>
 
   <!--<iframe *ngIf="form.geolocation" [src]="sanitizer.bypassSecurityTrustResourceUrl('https://maps.google.com/maps?q='+form.geolocation.lat+','+form.geolocation.lng+'&hl=es;z=14&amp;output=embed')" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>-->
