--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -1,16 +1,23 @@
 <div class="container">
-  <br />
+  <br/>
   <h3>Formularios Llenados</h3>
   <a class="btn btn-primary" routerLink="/add_form">Agregar</a>
-  <hr />
-  <div class="input-group mb-3">
+  <hr/>
+  <div class="input-group mb-3" ngbDropdown>
+    <div class="input-group-prepend">
+      <button class="btn btn-outline-primary" id="dropdownConfig" ngbDropdownToggle>{{queryType?.text || 'Buscar por'}}</button>
+      <div ngbDropdownMenu aria-labelledby="dropdownConfig">
+        <span class="dropdown-item" href="#" *ngFor="let item of searchQueryChild" (click)="queryType = item">{{item.text}}</span>
+      </div>
+    </div>
     <input type="text" class="form-control" placeholder="Buscar" aria-label="Buscar" aria-describedby="basic-addon2" [(ngModel)]="query">
     <div class="input-group-append">
-      <span class="input-group-text" id="basic-addon2">
+      <a class="input-group-text" id="basic-addon2" (click)="search()">
         <i class="fas fa-search"></i>
-      </span>
+      </a>
     </div>
   </div>
+
   <div>
     <button class="btn btn-warning btn-sm" [disabled]="page <= 1" (click)="prev()">Atrás</button>
     <b> -- Página {{page}} -- </b>
@@ -18,7 +25,7 @@
     <button class="btn btn-secondary btn-sm" (click)="showAll()">Mostrar Todos</button>
   </div>
   <small>Mostrando {{pagedForms.length}} registro(s)</small>
-  <hr />
+  <hr/>
   <table class="table table-bordered table-hover table-striped">
     <thead class="thead-dark">
     <tr>
@@ -31,7 +38,7 @@
     </tr>
     </thead>
     <tbody>
-    <ng-container *ngFor="let form of pagedForms | search: query; let i = index">
+    <ng-container *ngFor="let form of pagedForms; let i = index">
       <tr>
         <th scope="row"><span *ngIf="form.user">{{form.user.name}} {{form.user.last_name}}</span></th>
         <td>{{form.medidor}}</td>
