Adding firebase rules

--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -11,7 +11,7 @@
       </div>
     </div>
     <input type="text" class="form-control" placeholder="Buscar" aria-label="Buscar" aria-describedby="basic-addon2" [(ngModel)]="query">
-    <div class="input-group-append">
+    <div class="input-group-append cursor-pointer">
       <a class="input-group-text" id="basic-addon2" (click)="search()">
         <i class="fas fa-search"></i>
       </a>
