--- a/web/src/styles.scss
+++ b/web/src/styles.scss
@@ -3,9 +3,14 @@
   text-align: center !important;
   margin: auto;
 }
+
 .framePicture {
   padding: 5px;
   margin: 5px;
   border: 1px solid #ededed;
   height: 320px;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
